--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to KoKoaTalk</title>
+    <title>Welcome to KoKoa Talk</title>
 </head>
 <body>
     <div class="status-bar">
@@ -22,6 +22,18 @@
             <i class="fas fa-bolt"></i>
         </div>
     </div>
+    <header class="welcome-header">
+        <h1 class = "welcome-header__title">Welcome to KoKoa Clone</h1>
+        <p class = "welcome-header__text">If you have Kokoa Acount, log in with your email or phone number</p>
+    </header>
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number">
+        <input type="password" placeholder="Password">
+        <input type="submit" value="Log In">
+        <a href="#">Find Kokoa Account or Password</a>
+    </form>
+
     <script src="https://kit.fontawesome.com/098d06958e.js" crossorigin="anonymous"></script>
 </body>
 </html>
