--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to KoKoa Talk</title>
+    <title>Welcome to Kokoa Talk</title>
 </head>
 <body>
     <div class="status-bar">
@@ -18,7 +19,7 @@
             
         <div class="status-bar__column">
             <span>100%</span>
-            <i class="fas fa-battery-full"></i>
+            <i class="fas fa-battery-full fa-lg"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
