#6.6 Sign Up Screen part

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <header class="welcome-header">
-        <h1 class = "welcome-header__title">Welcome to KoKoa Clone</h1>
+        <h1 class = "welcome-header__title">Welcome to KoKoa</h1>
         <p class = "welcome-header__text">If you have Kokoa Acount, log in with your email or phone number</p>
     </header>
 
