#6.7 login Form part One
:root --yellow

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kokoa Talk</title>
@@ -24,7 +24,7 @@
         </div>
     </div>
     <header class="welcome-header">
-        <h1 class = "welcome-header__title">Welcome to KoKoa</h1>
+        <h1 class = "welcome-header__title">Welcome to KokoaTalk</h1>
         <p class = "welcome-header__text">If you have Kokoa Acount, log in with your email or phone number</p>
     </header>
 
