--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <p class = "welcome-header__text">If you have Kokoa Acount, log in with your email or phone number</p>
     </header>
 
-    <form action="friends.html" method = "get" id="login-form">
-        <input name = "username" type="text" placeholder="Email or phone number">
-        <input name = "password" type="password" placeholder="Password">
-        <input type="submit" value="Log In">
-        <a href="#">Find Kokoa Account or Password</a>
+    <form class="login-form"  action="friends.html" method = "get" id="login-form">
+        <input class="login-form__input" name = "username" type="text" placeholder="Email or phone number">
+        <input class="login-form__input" name = "password" type="password" placeholder="Password">
+        <input class="login-form__btn" type="submit" value="Log In">
+        <a class="login-form__a" href="#">Find Kokoa Account or Password</a>
     </form>
 
     <script src="https://kit.fontawesome.com/098d06958e.js" crossorigin="anonymous"></script>
