--- a/friends.html
+++ b/friends.html
@@ -68,8 +68,10 @@
                         </div>
                     </div>
                     <div class="user-component__column">
-                        <span>2</span>
-                        <i class="fas fa-chevron-right fa-xs"></i>
+                        <div>
+                            <span>2</span>
+                            <i class="fas fa-chevron-right fa-xs"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -83,19 +85,19 @@
                     </a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#">
-                        <span class="nav__notification">1
+                    <a class="nav__link" href="chats.html">
+                        <span class="nav__notification badge">1
                         </span>
                         <i class="far fa-comment fa-2x"></i>
                     </a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#">
+                    <a class="nav__link" href="find.html">
                         <i class="fas fa-search fa-2x"></i>
                     </a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#">
+                    <a class="nav__link" href="more.html">
                         <i class="fas fa-ellipsis-h fa-2x"></i>
                     </a>
                 </li>
