--- a/chats.html
+++ b/chats.html
@@ -25,10 +25,13 @@
             </div>
         </div>
         <header class="screen-header">
-            <h1 class="screen-header__title">Friends</h1>
+            <h1 class="screen-header__title">Chats</h1>
             <div class="screen-header__icons">
                 <span>
                     <i class="fas fa-search fa-lg"></i>
+                </span>
+                <span>
+                    <i class="far fa-comment-dots fa-lg"></i>
                 </span>
                 <span>
                     <i class="fas fa-music fa-lg"></i>
@@ -39,63 +42,47 @@
             </div>
         </header>
 
-        <a id="friends-display-link">
-            <i class="fas fa-info-circle"></i>
-            Friends' Names Display
-            <i class="fas fa-chevron-right fa-xs"></i>
-        </a>
-        <main class="friends-screen">
+        <main class="main-screen">
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="img/1.jpg" class="user-component__avatar user-component__avatar--xl" alt="">
+                    <img
+                        src="img/1.jpg"
+                        class="user-component__avatar user-component__avatar"
+                        alt="">
                     <div class="user-component__text">
                         <h4 class="user-component__title">최익현</h4>
-                        <!-- <h6 class="user-component__subtitle">공무원출신입니다.</h4> -->
+                        <h6 class="user-component__subtitle">공무원출신입니다.</h4>
                     </div>
                 </div>
-                <div class="user-component__column"></div>
-            </div>
-            <div class="friends-screen__channel">
-                <div class="friends-screen__channel-header">
-                    <span>Channel</span>
-                    <i class="fas fa-chevron-up fa-xs"></i>
-                </div>
-                <div class="user-component">
-                    <div class="user-component__column">
-                        <img src="img/1.jpg" class="user-component__avatar user-component__avatar--sm" alt="">
-                        <div class="user-component__text">
-                            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>                            
-                        </div>
-                    </div>
-                    <div class="user-component__column">
-                        <span>2</span>
-                        <i class="fas fa-chevron-right fa-xs"></i>
-                    </div>
+                <div class="user-component__column ">
+                    <span class="user-component-time">21:22</span>
+                    <span class="badge">1</span>
                 </div>
             </div>
+            
         </main>
 
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__btn">
                     <a class="nav__link" href="friends.html">
-                        <i class="fas fa-user fa-2x"></i>
+                        <i class="far fa-user fa-2x"></i>
                     </a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#">
-                        <span class="nav__notification">1
+                    <a class="nav__link" href="chats.html">
+                        <span class="nav__notification badge">1
                         </span>
-                        <i class="far fa-comment fa-2x"></i>
+                        <i class="fas fa-comment fa-2x"></i>
                     </a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#">
+                    <a class="nav__link" href="find.html">
                         <i class="fas fa-search fa-2x"></i>
                     </a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#">
+                    <a class="nav__link" href="more.html">
                         <i class="fas fa-ellipsis-h fa-2x"></i>
                     </a>
                 </li>
