--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Find - Kokoa Talk</title>
+        <title>More - Kokoa Talk</title>
     </head>
 
     <body>
@@ -25,64 +25,64 @@
             </div>
         </div>
         <header class="screen-header">
-            <h1 class="screen-header__title">Find</h1>
+            <h1 class="screen-header__title">More</h1>
             <div class="screen-header__icons">
                 <span>
                     <i class="fas fa-search fa-lg"></i>
                 </span>
                 <span>
+                    <i class="fas fa-music fa-lg"></i>
+                </span>
+                <span>
                     <i class="fas fa-cog fa-lg"></i>
-                    <div class="screen-header__new point"></div>
                 </span>
             </div>
         </header>
 
-        <main class="main-screen">
+        <main class="main-screen more-screen">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img
+                        src="img/1.jpg"
+                        class="user-component__avatar user-component__avatar--xl"
+                        alt="">
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">최익현</h4>
+                        <h6 class="user-component__subtitle">+ 999 0523 0523</h4>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <i class="far fa-comment-alt fa-2x"></i>
+                </div>
+            </div>
             <div class="icon-row">
                 <div class="icon-row__icon">
-                    <i class="fas fa-qrcode fa-lg"></i>
-                    <span>QR Code</span></div>
+                    <i class="far fa-calendar"></i>
+                    <span>Calendar</span></div>
                 <div class="icon-row__icon">
-                    <i class="far fa-address-book fa-lg"></i>
-                    <span>Add by Contacts</span></div>
+                    <i class="far fa-smile-beam"></i>
+                    <span>Emoticons</span></div>
                 <div class="icon-row__icon">
-                    <i class="fas fa-fingerprint fa-lg"></i>
-                    <span>Add by ID</span></div>
+                    <i class="fas fa-paint-roller"></i>
+                    <span>Themes</span></div>
                 <div class="icon-row__icon">
-                    <i class="far fa-envelope fa-lg"></i>
-                    <span>Invite</span></div>
+                    <i class="fas fa-file-invoice-dollar"></i>
+                    <span>Account</span></div>
             </div>
-            <div class="recommended-friends">
-                <h6 class="recommended-friends__title">
-                    Recommended Friends
-                </h6>
-                <span>You have no recommended friends.</span>
-            </div>
-            <div class="open-chat">
-                <div class="open-chat__header">
-                    <h4>Open Chat</h4>
-                    <span>Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i></span>
-                     
-                </div>
-                <div class="open-post">
-                    <div class="open-post__column">
-                        <h5 class="open-post__title">#BTS</h5>
-                        <h6 class="open-post__hashing">#bts#army#friends</h6>
-                        <div class="open-post__members">
-                            <img src="img/1.jpg" />
-                            <span class="open-post__member-count">802 members</span>
-                            <div class="divider"></div>
-                            <span class="open-post__member-status">Active</span>
+            <div class="more-suggestions">
+                <h4 class="more-suggestions__title">Suggestions</h4>
+                <div class="more-suggestions__icons">
+                    <div class="more-suggestions__icon">
+                        <div class="more-suggestions__icon-image">
+                            <i class="fas fa-quote-right"></i>
                         </div>
+                        <span class="more-suggetions__icon-text">KoKoa Story</span>
                     </div>
-                    <div class="open-post__column">
-                        <div class="open-post__photo">
-                            <img src="img/1.jpg" alt="">
-                            <div class="open-post__heart-count">
-                                <i class="fas fa-heart"></i>
-                                <span>326</span>
-                            </div>
+                    <div class="more-suggestions__icon">
+                        <div class="more-suggestions__icon-image">
+                            <i class="fas fa-quote-right"></i>
                         </div>
+                        <span class="more-suggetions__icon-text">KoKoa Story</span>
                     </div>
                 </div>
             </div>
