--- a/chats.html
+++ b/chats.html
@@ -43,22 +43,24 @@
         </header>
 
         <main class="main-screen">
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img
-                        src="img/1.jpg"
-                        class="user-component__avatar user-component__avatar"
-                        alt="">
-                    <div class="user-component__text">
-                        <h4 class="user-component__title">최익현</h4>
-                        <h6 class="user-component__subtitle">공무원출신입니다.</h4>
+            <a href="chat.html">
+                <div class="user-component">
+                    <div class="user-component__column">
+                        <img
+                            src="img/1.jpg"
+                            class="user-component__avatar user-component__avatar"
+                            alt="">
+                        <div class="user-component__text">
+                            <h4 class="user-component__title">최익현</h4>
+                            <h6 class="user-component__subtitle">공무원출신입니다.</h4>
+                        </div>
+                    </div>
+                    <div class="user-component__column ">
+                        <span class="user-component-time">21:22</span>
+                        <span class="badge">1</span>
                     </div>
                 </div>
-                <div class="user-component__column ">
-                    <span class="user-component-time">21:22</span>
-                    <span class="badge">1</span>
-                </div>
-            </div>
+            </a>
             
         </main>
 
