--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>More - Kokoa Talk</title>
+        <title>Settings - Kokoa Talk</title>
     </head>
 
     <body>
@@ -24,68 +24,46 @@
                 <i class="fas fa-bolt"></i>
             </div>
         </div>
-        <header class="screen-header">
-            <h1 class="screen-header__title">More</h1>
-            <div class="screen-header__icons">
-                <span>
-                    <i class="fas fa-search fa-lg"></i>
-                </span>
-                <span>
-                    <i class="fas fa-music fa-lg"></i>
-                </span>
-                <span>
-                    <i class="fas fa-cog fa-lg"></i>
-                </span>
+
+        <header class="alt-header">
+            <div class="alt-header__column">
+                <a href="more.html">
+                    <i class="fas fa-angle-left fa-3x"></i>
+                </a>
+            </div>
+            <div class="alt-header__column">
+                <div class="alt-header__title">Settings</div>
+            </div>
+            <div class="alt-header__column">
+                <i class="fas fa-search fa-lg"></i>
             </div>
         </header>
 
-        <main class="main-screen more-screen">
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img
-                        src="img/1.jpg"
-                        class="user-component__avatar user-component__avatar--xl"
-                        alt="">
-                    <div class="user-component__text">
-                        <h4 class="user-component__title">최익현</h4>
-                        <h6 class="user-component__subtitle">+ 999 0523 0523</h4>
+        <main class="main-screen">
+            <div class="settings-list">
+                <li class="settings__setting">
+                    <div class="settings__setting-column">
+                        <i class="fas fa-bullhorn"></i>
+                        <span>Notices</span>
                     </div>
-                </div>
-                <div class="user-component__column">
-                    <i class="far fa-comment-alt fa-2x"></i>
-                </div>
-            </div>
-            <div class="icon-row">
-                <div class="icon-row__icon">
-                    <i class="far fa-calendar"></i>
-                    <span>Calendar</span></div>
-                <div class="icon-row__icon">
-                    <i class="far fa-smile-beam"></i>
-                    <span>Emoticons</span></div>
-                <div class="icon-row__icon">
-                    <i class="fas fa-paint-roller"></i>
-                    <span>Themes</span></div>
-                <div class="icon-row__icon">
-                    <i class="fas fa-file-invoice-dollar"></i>
-                    <span>Account</span></div>
-            </div>
-            <div class="more-suggestions">
-                <h4 class="more-suggestions__title">Suggestions</h4>
-                <div class="more-suggestions__icons">
-                    <div class="more-suggestions__icon">
-                        <div class="more-suggestions__icon-image">
-                            <i class="fas fa-quote-right"></i>
-                        </div>
-                        <span class="more-suggetions__icon-text">KoKoa Story</span>
+                    <div class="settings__setting-column"></div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings__setting-column">
+                        <i class="fas fa-flask"></i>
+                        <span>Kokoa Lab</span>
                     </div>
-                    <div class="more-suggestions__icon">
-                        <div class="more-suggestions__icon-image">
-                            <i class="fas fa-quote-right"></i>
-                        </div>
-                        <span class="more-suggetions__icon-text">KoKoa Story</span>
+                    <div class="settings__setting-column"></div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings__setting-column">
+                        <i class="fas fa-info-circle"></i>
+                        <span>Version</span>
                     </div>
-                </div>
+                    <div class="settings__setting-column">Latest Version</div>
+                </li>
             </div>
+
         </main>
 
         <nav class="nav">
