--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chat /w 최익현 - Kokoa Talk</title>
+        <title>Chat /w 네코짱 - Kokoa Talk</title>
     </head>
 
     <body id="chat-screen">
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div class="alt-header__column">
-                <div class="alt-header__title">최익현</div>
+                <div class="alt-header__title">네코짱</div>
             </div>
             <div class="alt-header__column">
                 <span>
@@ -53,10 +53,10 @@
                 <img src="img/1.jpg" alt="">
                 <div class="message-row__content">
                     <soan class="message__author">
-                        최주동
+                        네코짱
                     </soan>
                     <div class="message__info">
-                        <span class="message__bubble">안녕하신가?</span>
+                        <span class="message__bubble">츄르 주문하였습니다!</span>
                         <span class="message__time">21:27</span>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
             <div class="message-row message-row--own">
                 <div class="message-row__content">
                     <div class="message__info">
-                        <span class="message__bubble">무슨일이신가?</span>
+                        <span class="message__bubble">주문 해주셔서 갑사합니다.</span>
                         <span class="message__time">21:28</span>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
         </main>
 
         <form action="" class="reply">
-            <div class="reply___column">
+            <div class="reply__column">
                 <i class="far fa-plus-square fa-lg"></i>
             </div>
             <div class="reply__column">
@@ -83,7 +83,9 @@
                 </button>
             </div>
         </form>
-
+        <div id="no-mobile">
+            <span>Your screen is too big :(</span>
+        </div>
         <script src="https://kit.fontawesome.com/098d06958e.js" crossorigin="anonymous"></script>
     </body>
 
