--- a/find.html
+++ b/find.html
@@ -67,7 +67,7 @@
                 <div class="open-post">
                     <div class="open-post__column">
                         <h5 class="open-post__title">#BTS</h5>
-                        <h6 class="open-post__hashing">#bts#army#friends</h6>
+                        <h6 class="open-post__hashtags">#bts#army#friends</h6>
                         <div class="open-post__members">
                             <img src="img/1.jpg" />
                             <span class="open-post__member-count">802 members</span>
@@ -114,7 +114,9 @@
                 </li>
             </ul>
         </nav>
-
+        <div id="no-mobile">
+            <span>Your screen is too big :(</span>
+        </div>
         <script src="https://kit.fontawesome.com/098d06958e.js" crossorigin="anonymous"></script>
     </body>
 
