--- a/chats.html
+++ b/chats.html
@@ -51,8 +51,8 @@
                             class="user-component__avatar user-component__avatar"
                             alt="">
                         <div class="user-component__text">
-                            <h4 class="user-component__title">최익현</h4>
-                            <h6 class="user-component__subtitle">공무원출신입니다.</h4>
+                            <h4 class="user-component__title">네코짱</h4>
+                            <h6 class="user-component__subtitle">집사 구합니다.</h4>
                         </div>
                     </div>
                     <div class="user-component__column ">
@@ -90,7 +90,9 @@
                 </li>
             </ul>
         </nav>
-
+        <div id="no-mobile">
+            <span>Your screen is too big :(</span>
+        </div>
         <script src="https://kit.fontawesome.com/098d06958e.js" crossorigin="anonymous"></script>
     </body>
 
