--- a/friends.html
+++ b/friends.html
@@ -47,9 +47,12 @@
         <main class="friends-screen">
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="img/1.jpg" class="user-component__avatar user-component__avatar--xl" alt="">
+                    <img
+                        src="img/1.jpg"
+                        class="user-component__avatar user-component__avatar--xl"
+                        alt="">
                     <div class="user-component__text">
-                        <h4 class="user-component__title">최익현</h4>
+                        <h4 class="user-component__title">네코짱</h4>
                         <!-- <h6 class="user-component__subtitle">공무원출신입니다.</h4> -->
                     </div>
                 </div>
@@ -62,9 +65,12 @@
                 </div>
                 <div class="user-component">
                     <div class="user-component__column">
-                        <img src="img/1.jpg" class="user-component__avatar user-component__avatar--sm" alt="">
+                        <img
+                            src="img/1.jpg"
+                            class="user-component__avatar user-component__avatar--sm"
+                            alt="">
                         <div class="user-component__text">
-                            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>                            
+                            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                         </div>
                     </div>
                     <div class="user-component__column">
@@ -103,7 +109,12 @@
                 </li>
             </ul>
         </nav>
-
+        <div id="splash-screen">
+            <i class="fas fa-comment fa-2x"></i>
+        </div>
+        <div id="no-mobile">
+            <span>Your screen is too big :(</span>
+        </div>
         <script src="https://kit.fontawesome.com/098d06958e.js" crossorigin="anonymous"></script>
     </body>
 
