--- a/chat.html
+++ b/chat.html
@@ -64,7 +64,7 @@
             <div class="message-row message-row--own">
                 <div class="message-row__content">
                     <div class="message__info">
-                        <span class="message__bubble">주문 해주셔서 갑사합니다.</span>
+                        <span class="message__bubble">주문 해주셔서 감사합니다.</span>
                         <span class="message__time">21:28</span>
                     </div>
                 </div>
