--- a/more.html
+++ b/more.html
@@ -47,7 +47,7 @@
                         class="user-component__avatar user-component__avatar--xl"
                         alt="">
                     <div class="user-component__text">
-                        <h4 class="user-component__title">최익현</h4>
+                        <h4 class="user-component__title">네코짱</h4>
                         <h6 class="user-component__subtitle">+ 999 0523 0523</h4>
                     </div>
                 </div>
